@@ -4,7 +4,7 @@ Changes in Shorewall 4.4.19 RC 1
 
 2)  Display mangle table in the output from 'shorewall show tc'.
 
-3)  Exit tcpost early if connection is marked.
+3)  Allow simple TC to work on both IPv4 and IPv6
 
 Changes in Shorewall 4.4.19 Beta 5
 
